# SCVDT

./: README.md
Binary-Exploit-Visualization/: README.md  pack.py  requirements.txt  set-aslr.sh  setup.sh
Binary-Exploit-Visualization/doc/: record_syscalls.md  report_description.md
Binary-Exploit-Visualization/docker/: angr_replay_cmd.sh  ffmpeg_demo_cmd.sh
Binary-Exploit-Visualization/source/: SimPacketsC.py  analysis.py  arena.py  call_analysis.py  exploited_state_hook.py  function_replace.py  got_analysis.py  heap_analysis.py  helpers.py  leak_analysis.py  logger.py  parse_helpers.py  replayer.py  shellcode_analysis.py  socat_stage.py  structures.py  symbol_resolve.py  syscall_dispatcher.py
CompilerTools/: README.md  README_CN.md  bug_hunter.py  requirement.txt  utils.py  vector.py
CompilerTools/gcc-log/: gcc-tag.txt  log_4_4.txt  log_4_5.txt  log_4_6.txt  log_4_7.txt  log_4_8.txt  log_4_9.txt  log_5.txt  log_6.txt  log_7.txt  log_8.txt  log_9.txt
CompilerTools/model/: index_time_all.txt  no_same_no_neg.txt  normal_time  time.pkl
HDVerify/: .gitignore  README.md
HDVerify/aflgo11U/: Makefile  Readme.md  afl-fuzz.c  afl-tmin.c  config.h
HDVerify/aflgo11U/distance_calculator/: .clang-format  CMakeLists.txt  main.cpp
HDVerify/crash-verify/: README.md  run_verify.py  verify.cfg
HDVerify/fuzz-infra/: README.md  init.sh
JVulDS/: README.md
JVulDS/DeepLearningFiles/: README.md
JVulDS/PDG/: README.md  pom.xml  (+1 more)
LMFuzzer/: README.md
PropertyGraph/: README.md
VKGGen/: README.md  main.py  test.py
VKGServe/: README.md  pom.xml
VulnDB/: README.md
(+28163 files in other folders)
